--- a/Lectures/Week01_IntroToNHST_Lecture.Rmd
+++ b/Lectures/Week01_IntroToNHST_Lecture.Rmd
@@ -1165,6 +1165,109 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 > **Test Your Understanding:** Which value of x is most common, according to the probability distribution seen here? Which values are less common?
 
 ---
+## Describing your data: Probability distributions
+
+.pull-left[
+
++ We can also use probability distributions to compute the probability of value beyond a specific point on the distribution. 
+
++ Imagine we have a range of observations whose values fall between 8 and 32 that are distributed as pictured.
+
++ Let's say we randomly select an observation from our dataset.
+
+]
+
+.pull-right[
+```{r, echo = F, fig.height=3.5}
+testDat <- ggplot(data.frame(x = c(8, 32)), aes(x = x)) +
+  stat_function(fun=dnorm, args= list(20, 3), geom = "line", linewidth = 1.5) +
+  theme(axis.text = element_text(size = 12), 
+        axis.title = element_text(size = 14, face = 'bold'),
+        axis.text.y = element_blank(),
+        axis.ticks.y = element_blank(),
+        axis.title.y = element_blank()) +
+  geom_hline(yintercept = 0, linewidth = 1.5)
+
+testDat
+```
+]
+
+---
+## Describing your data: Probability distributions
+
+.pull-left[
+
++ We can also use probability distributions to compute the probability of value beyond a specific point on the distribution.
+
++ Imagine we have a range of observations whose values fall between 8 and 32 that are distributed as pictured.
+
++ Let's say we randomly select an observation from our dataset.
+
++ What is the likelihood our randomly selected observation is at least 25?
+
+]
+
+.pull-right[
+
+```{r, echo = F, fig.height=3.5}
+testDat + 
+    geom_vline(xintercept = 25, color = accent3, linewidth = 1.5)
+```
+
+]
+
+
+---
+count: false
+
+## Describing your data: Probability distributions
+
+.pull-left[
+
++ We can also use probability distributions to compute the probability of value beyond a specific point on the distribution.
+
++ Imagine we have a range of observations whose values fall between 8 and 32 that are distributed as pictured.
+
++ Let's say we randomly select an observation from our dataset.
+
++ What is the likelihood our randomly selected observation is at least 25?
+
++ ~95% of our observations are less than 25. This means we only have about a 5% chance of randomly selecting an observation of at least 25. 
+
+]
+
+.pull-right[
+
+```{r, echo = F, fig.height=3.5}
+testDat + 
+  geom_area(stat = 'function', fun = dnorm, args= list(20, 3), fill = baseColor, xlim=c(8, 25), alpha = .8) +
+  geom_area(stat = 'function', fun = dnorm, args= list(20, 3), fill = accent2, xlim=c(25, 30), alpha = .8) +
+  annotate('text', label = '95%', x = 20, y = .05, color = 'white', size = 7) + 
+  annotate('text', label = '5%', x = 26, y = .01, color = 'white', size = 7) +
+  geom_vline(xintercept = 25, color = accent3, linewidth = 1)
+```
+]
+
+---
+## Probability Distributions
+
++ Why does this matter?
+
+--
+
++ Many of the statistical tests we will learn about in this course all involve testing the probability of a specific value of a test statistic, given that $H_0$ is true. 
+
++ In other words, if $H_0$ is true, how likely is it that we would get results at least as extreme as ours?
+
++ If the value is unusual enough (i.e., if it is highly unlikely we would see the value if the null is true), we reject $H_0$
+
+
+---
+class: inverse, center, middle
+
+## Questions?
+
+---
 ## The normal distribution
 
 + A probability distribution where values around the mean are most common, and values further from the mean are increasingly less common.
@@ -1182,7 +1285,7 @@ ggplot(data.frame(x = c(-4, 4)), aes(x = x)) +
 
 + Unimodal
 
-+ Centered around mean
++ Its key parameters are mean and standard deviation
 
 ]
 .pull-right[
@@ -1206,7 +1309,59 @@ normDist + geom_vline(xintercept = 0, color=accent1)
 
 + Unimodal
 
-+ Centered around mean
++ Its key parameters are mean and standard deviation
+  
+
+]
+.pull-right[
+
+```{r, echo = F, fig.width=5, fig.height=3.5}
+normDist + geom_vline(xintercept = 0, color=accent1) + 
+  stat_function(fun=dnorm, geom = "line", args = list(mean = 2), linewidth = 1.5, color = baseColor) +
+  stat_function(fun=dnorm, geom = "line", args = list(mean = -2), linewidth = 1.5, color = accent3) +
+  annotate(geom='text', label=paste0('mu == -2'), parse = T, x=-5, y=0.32, size = 6, colour = accent3, hjust = 0) +
+  annotate(geom='text', label=paste0('mu == 0'), parse = T, x=-5, y=0.35, size = 6, hjust = 0) +
+  annotate(geom='text', label=paste0('mu == 2'), parse = T, x=-5, y=0.38, size = 6, colour = baseColor, hjust = 0)
+```
+
+Adjusting the mean changes where the curve is centered on the $x$-axis
+
+]
+
+---
+## The normal distribution
+.pull-left[
+**Characteristics of a normal distribution**
+
++ Unimodal
+
++ Its key parameters are mean and standard deviation
+  
+
+]
+.pull-right[
+
+```{r, echo = F, fig.width=5, fig.height=3.5}
+normDist + geom_vline(xintercept = 0, color=accent1) + 
+  stat_function(fun=dnorm, geom = "line", args = list(sd = .5), linewidth = 1.5, color = baseColor) +
+  stat_function(fun=dnorm, geom = "line", args = list(sd = 1.5), linewidth = 1.5, color = accent3) +
+  annotate(geom='text', label=paste0('mu == -2'), parse = T, x=-5, y=0.61, size = 6, colour = accent3, hjust = 0) +
+  annotate(geom='text', label=paste0('mu == 0'), parse = T, x=-5, y=0.68, size = 6, hjust = 0) +
+  annotate(geom='text', label=paste0('mu == .5'), parse = T, x=-5, y=.75, size = 6, colour = baseColor, hjust = 0)
+```
+
+Adjusting the $SD$ changes the shape of the curve
+
+]
+
+---
+## The normal distribution
+.pull-left[
+**Characteristics of a normal distribution**
+
++ Unimodal
+
++ Its key parameters are mean and standard deviation
 
   + **68%** of scores fall within **1 SD** of the mean
 
@@ -1225,7 +1380,7 @@ normDist + geom_area(stat = 'function', fun = dnorm, fill = baseColor, xlim=c(-1
 
 + Unimodal
 
-+ Centered around mean
++ Its key parameters are mean and standard deviation
 
   + 68% of scores fall within 1 SD of the mean
   + **95%** of scores fall within **~2 SD** of the mean (exactly 1.96 SD of the mean)
@@ -1245,7 +1400,7 @@ normDist + geom_area(stat = 'function', fun = dnorm, fill = accent3, xlim=c(-1.9
 
 + Unimodal
 
-+ Centered around mean
++ Its key parameters are mean and standard deviation
 
   + 68% of scores fall within 1 SD of the mean
   + 95% of scores fall within ~2 SD of the mean (exactly 1.96 SD of the mean)
@@ -1394,249 +1549,128 @@ waisDist +
   annotate(geom='segment', x=0, xend=0, y=0, yend=.4, color = accent1, linetype='dashed', linewidth = 1)
 ```
 ]
----
-## Describing your data: Probability distributions
 
-.pull-left[
-
-+ We can also use probability distributions to compute the probability of value beyond a specific point on the distribution. 
-
-+ Imagine we have a range of observations whose values fall between 8 and 32 that are distributed as pictured.
-
-+ Let's say we randomly select an observation from our dataset.
-
-]
-
-.pull-right[
-```{r, echo = F, fig.height=3.5}
-testDat <- ggplot(data.frame(x = c(8, 32)), aes(x = x)) +
-  stat_function(fun=dnorm, args= list(20, 3), geom = "line", linewidth = 1.5) +
-  theme(axis.text = element_text(size = 12), 
-        axis.title = element_text(size = 14, face = 'bold'),
-        axis.text.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        axis.title.y = element_blank()) +
-  geom_hline(yintercept = 0, linewidth = 1.5)
-
-testDat
-```
-]
 
 ---
-## Describing your data: Probability distributions
+## Assessing Normality in Data
 
-.pull-left[
++ Many of the parametric statistical tests we'll be using are most reliable when data are normally distributed
 
-+ We can also use probability distributions to compute the probability of value beyond a specific point on the distribution.
-
-+ Imagine we have a range of observations whose values fall between 8 and 32 that are distributed as pictured.
-
-+ Let's say we randomly select an observation from our dataset.
-
-+ What is the likelihood our randomly selected observation is at least 25?
-
-]
-
-.pull-right[
-
-```{r, echo = F, fig.height=3.5}
-testDat + 
-    geom_vline(xintercept = 25, color = accent3, linewidth = 1.5)
-```
-
-]
+> **Test Your Understanding:** In a perfectly normal distribution, how are the mean, median, and mode distributed?
 
 
 ---
 count: false
 
-## Describing your data: Probability distributions
+## Assessing Normality in Data
+
++ Many of the parametric statistical tests we'll be using are most reliable when data are normally distributed
+
++ Not all data are normally distributed
+    + **Skewness**
 
 .pull-left[
+.center[**Negatively Skewed**]
+```{r, echo = F, message = F, fig.height=4}
+set.seed(113)
+skewDat <- data.frame(x=rbeta(200, 8, 2))
+skewDat$x <- skewDat$x*100
+skewDat$x <- round(skewDat$x)
+skewDat$x[14] <- 85
+skewDat$x[27] <- 85
 
-+ We can also use probability distributions to compute the probability of value beyond a specific point on the distribution.
-
-+ Imagine we have a range of observations whose values fall between 8 and 32 that are distributed as pictured.
-
-+ Let's say we randomly select an observation from our dataset.
-
-+ What is the likelihood our randomly selected observation is at least 25?
-
-+ ~95% of our observations are less than 25. This means we only have about a 5% chance of randomly selecting an observation of at least 25. 
-
-]
-
-.pull-right[
-
-```{r, echo = F, fig.height=3.5}
-testDat + 
-  geom_area(stat = 'function', fun = dnorm, args= list(20, 3), fill = baseColor, xlim=c(8, 25), alpha = .8) +
-  geom_area(stat = 'function', fun = dnorm, args= list(20, 3), fill = accent2, xlim=c(25, 30), alpha = .8) +
-  annotate('text', label = '95%', x = 20, y = .05, color = 'white', size = 7) + 
-  annotate('text', label = '5%', x = 26, y = .01, color = 'white', size = 7) +
-  geom_vline(xintercept = 25, color = accent3, linewidth = 1)
-```
-]
-
----
-## Probability Distributions
-
-+ Why does this matter?
-
---
-
-+ Many of the statistical tests we will learn about in this course all involve testing the probability of a specific value of a test statistic, given that $H_0$ is true. 
-
-+ In other words, if $H_0$ is true, how likely is it that we would get results at least as extreme as ours?
-
-+ If the value is unusual enough (i.e., if it is highly unlikely we would see the value if the null is true), we reject $H_0$
-
----
-class: center, inverse, middle
-
-## Questions?
-
----
-## Null Distribution
-
-+ All parametric quantitative tests we learn about in this course evaluate significance by evaluating results against a predefined **null distribution**
-
-+ The null distribution is the probability distribution of a statistic **given that $H_0$ is true**. 
-
-+ The shape of the null distribution depends on the test statistic (and the degrees of freedom, which we'll get to at a later point in the course)
-
-
----
-## Comparing Data against null distribution: NHST
-
-.pull-left[
-```{r, echo = F, fig.height=5}
-testDat
-```
-
-]
-
-
----
-count: false
-
-## Comparing Data against null distribution: NHST
-
-.pull-left[
-
-```{r, echo = F, fig.height=5}
-testDat + geom_vline(xintercept = 24, color = accent1, linewidth = 1.5)
-```
-
-]
-
-.pull-right[
-```{r, echo = F, fig.height=5}
-testDat + geom_vline(xintercept = 18, color = accent3, linewidth = 1.5)
-```
-
-]
-
-> **Test Your Understanding:** Which score is less common?
-
----
-count: false
-
-## Comparing Data against null distribution: NHST
-
-.pull-left[
-```{r, echo = F, fig.height=5}
-testDat +
-  geom_area(stat = 'function', fun = dnorm, args= list(20, 3), fill = baseColor, xlim=c(8, 24), alpha = .8) +
-  geom_area(stat = 'function', fun = dnorm, args= list(20, 3), fill = accent2, xlim=c(24, 30), alpha = .8) +
-  annotate('text', label = '91%', x = 18, y = .02, color = 'white', size = 7) + 
-  annotate('text', label = '9%', x = 25, y = .02, color = 'white', size = 7)+ 
-  geom_vline(xintercept = 24, color = accent1, linewidth = 1.5)
-```
-]
-
-.pull-right[
-```{r, echo = F, fig.height=5}
-testDat +
-  geom_area(stat = 'function', fun = dnorm, args= list(20, 3), fill = accent2, xlim=c(8, 18), alpha = .8) +
-  geom_area(stat = 'function', fun = dnorm, args= list(20, 3), fill = baseColor, xlim=c(18, 30), alpha = .8) +
-  annotate('text', label = '25%', x = 16, y = .02, color = 'white', size = 7) + 
-  annotate('text', label = '75%', x = 22, y = .02, color = 'white', size = 7) + 
-  geom_vline(xintercept = 18, color = accent3, linewidth = 1.5)
-```
-]
-
-> **Test Your Understanding:** Which score is less common?
-
-
----
-
-## Null Distributions
-
-.pull-left[
-```{r, echo = F, fig.height=2.5, fig.width=4.5}
-ggplot(data.frame(x=c(0, 10)), aes(x=x)) +
-  stat_function(fun=dchisq, geom='line', args=c(df = 1), color = baseColor, linewidth=1.5) +
-  stat_function(fun=dchisq, geom='line', args=c(df = 2), color = accent1, linewidth=1.5) +
-  stat_function(fun=dchisq, geom='line', args=c(df = 3), color = accent2, linewidth=1.5) +
-  stat_function(fun=dchisq, geom='line', args=c(df = 4), color = accent3, linewidth=1.5) +
-  scale_y_continuous(limits=c(0, .52), breaks = seq(0, .5, .1)) +
-  annotate('text', label = 'df = 1', color = baseColor, x = 8, y = .45, size = 5) +
-  annotate('text', label = 'df = 2', color = accent1, x = 8, y = .38, size = 5) +
-  annotate('text', label = 'df = 3', color = accent2, x = 8, y = .31, size = 5) +
-  annotate('text', label = 'df = 4', color = accent3, x = 8, y = .24, size = 5) +
-  labs(x = expression(chi^2)) +
-  theme(axis.text.y = element_blank(),
+ggplot(skewDat, aes(x)) + geom_histogram(aes(y=after_stat(density)), fill = baseColor, color = 'gray32', binwidth=2) +
+  geom_density(linewidth=1) +
+  geom_vline(xintercept = mean(skewDat$x), color = accent1, linewidth = 1) +
+  geom_vline(xintercept = median(skewDat$x), color = accent2, linewidth = 1) +
+  geom_vline(xintercept = round(Mode(skewDat$x),2), color = accent3, linewidth = 1) +
+  annotate('text', label = 'Mean', color = accent1, x = 60, y = .05, size = 6, hjust = 0) +
+  annotate('text', label = 'Median', color = accent2, x = 60 , y = .045, size = 6, hjust = 0) +
+  annotate('text', label = 'Mode', color = accent3, x = 60, y = .04, size = 6, hjust = 0) +
+  theme(axis.text = element_blank(),
         axis.title.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        axis.title.x = element_text(size = 16, face = 'bold'),
-        axis.text.x = element_text(size = 14))
+        axis.title.x = element_text(size = 14, face = 'bold'),
+        axis.ticks = element_blank())
 
 ```
 ]
-
 
 .pull-right[
-```{r, echo = F, fig.height=2.5, fig.width=4.5}
-ggplot(data.frame(x=c(-6, 6)), aes(x=x)) +
-  stat_function(fun=dt, geom='line', args=c(df = 5), color = baseColor, linewidth=1.5) +
-  stat_function(fun=dt, geom='line', args=c(df = 10), color = accent1, linewidth=1.5) +
-  stat_function(fun=dt, geom='line', args=c(df = 20), color = accent2, linewidth=1.5) +
-  stat_function(fun=dt, geom='line', args=c(df = 50), color = accent3, linewidth=1.5) +
-  annotate('text', label = 'df = 5', color = baseColor, x = 3, y = .4, size = 5) +
-  annotate('text', label = 'df = 10', color = accent1, x = 3, y = .35, size = 5) +
-  annotate('text', label = 'df = 20', color = accent2, x = 3, y = .3, size = 5) +
-  annotate('text', label = 'df = 50', color = accent3, x = 3, y = .25, size = 5) +
-  labs(x = 't-statistic') +
-  theme(axis.text.y = element_blank(),
+.center[**Positively Skewed**]
+```{r, echo = F, message = F, fig.height=4}
+set.seed(2661)
+skewDat <- data.frame(x=rbeta(200, 10, 2))
+skewDat$x <- (skewDat$x*100)*-1
+skewDat$x <- round(skewDat$x)
+
+ggplot(skewDat, aes(x)) + geom_histogram(aes(y=after_stat(density)), fill = baseColor, color = 'gray32', binwidth=2) +
+  geom_density(linewidth=1) +
+  geom_vline(xintercept = mean(skewDat$x), color = accent1, linewidth = 1) +
+  geom_vline(xintercept = median(skewDat$x), color = accent2, linewidth = 1) +
+  geom_vline(xintercept = round(Mode(skewDat$x),2), color = accent3, linewidth = 1) +
+  annotate('text', label = 'Mean', color = accent1, x = -70, y = .05, size = 6, hjust = 0) +
+  annotate('text', label = 'Median', color = accent2, x = -70 , y = .045, size = 6, hjust = 0) +
+  annotate('text', label = 'Mode', color = accent3, x = -70, y = .04, size = 6, hjust = 0) +
+  theme(axis.text = element_blank(),
         axis.title.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        axis.title.x = element_text(size = 16, face = 'bold'),
-        axis.text.x = element_text(size = 14))
+        axis.title.x = element_text(size = 14, face = 'bold'),
+        axis.ticks = element_blank())
+```
+]
+
+---
+## Assessing Normality in Data
+
++ Many of the parametric statistical tests we'll be using are most reliable when data are normally distributed
+
++ Not all data are normally distributed
+    + **Skewness**
+    + **Kurtosis**
+
+.pull-left[
+.center[**Platykurtic**]
+```{r, echo = F, message = F, fig.height=4}
+platDat <- data.frame(x=c(12:20, 20, rep(21, 5), 22, 22, 23, 23, 24:32, 13, 15, 15, 18, 27, 30, 30))
+
+ggplot(platDat, aes(x)) + geom_histogram(aes(y=after_stat(density)), fill = baseColor, color = 'gray32', binwidth=2) +
+  geom_density(linewidth=1, adjust = 1.5) +
+  theme(axis.text = element_blank(),
+        axis.title.y = element_blank(),
+        axis.title.x = element_text(size = 14, face = 'bold'),
+        axis.ticks = element_blank())
 
 ```
 ]
 
-.center[
-```{r, echo = F, fig.height=2.5, fig.width=4.5}
-ggplot(data.frame(x=c(0, 5)), aes(x=x)) +
-  stat_function(fun=df, geom='line', args=c(df1 = 2, df2=10), color = baseColor, linewidth=1.5) +
-  stat_function(fun=df, geom='line', args=c(df1 = 5, df2=10), color = accent1, linewidth=1.5) + 
-  stat_function(fun=df, geom='line', args=c(df1 = 5, df2=100), color = accent2, linewidth=1.5) +
-  stat_function(fun=df, geom='line', args=c(df1 = 10, df2=100), color = accent3, linewidth=1.5) +
-  annotate('text', label = 'df1 = 2, df2 = 10', color = baseColor, x = 4, y = .75, size = 5) +
-  annotate('text', label = 'df1 = 5, df2 = 10', color = accent1, x = 4, y = .6, size = 5) +
-  annotate('text', label = 'df1 = 5, df2 = 100', color = accent2, x = 4, y = .45, size = 5) +
-  annotate('text', label = 'df1 = 10, df2 = 100', color = accent3, x = 4, y = .3, size = 5) +
-  labs(x = 'F-statistic') +
-  theme(axis.text.y = element_blank(),
-        axis.title.y = element_blank(),
-        axis.ticks.y = element_blank(),
-        axis.title.x = element_text(size = 16, face = 'bold'),
-        axis.text.x = element_text(size = 14))
+.pull-right[
+.center[**Leptokurtic**]
+```{r, echo = F, message = F, fig.height=4}
+leptDat <- data.frame(x = c(12, 13, rep(14, 3), rep(15, 6), rep(16, 25), rep(17, 6), rep(18, 3), 19, 20))
 
+ggplot(leptDat, aes(x)) + geom_histogram(aes(y=after_stat(density)), fill = baseColor, color = 'gray32', binwidth=1) +
+  geom_density(linewidth=1, adjust = 1) +
+  theme(axis.text = element_blank(),
+        axis.title.y = element_blank(),
+        axis.title.x = element_text(size = 14, face = 'bold'),
+        axis.ticks = element_blank())
 ```
 ]
+
+---
+## Assessing Normality in Data
+
++ Can visually assess histograms
+
++ Can also assess using statistical tests:
+
+  + For samples < 50, could use the *Shapiro-Wilk Test*
+
+  + For samples > 50, could use the *Kolmogorov–Smirnov Test*
+
+  + Significant results on these tests indicate that normality has been violated
+
++ Can also check the skewness and kurtosis values
+  + Values further from 0 indicate greater levels of skewness or kurtosis
 
 ---
 class: center, inverse, middle
