--- a/Week1.Rmd
+++ b/Week1.Rmd
@@ -1,17 +1,18 @@
 ---
-title: "Week 1: Exploring Your Data"
+title: 'Week 1: Exploring Your Data'
 ---
 
 <link href="css/style.css" rel="stylesheet"></link> 
 
+### Learning Objectives
 
-Coming Soon.
-
+Coming Soon
 
 [Lecture Slides](https://mtruelovehill.github.io/PRM/Lectures/Week01_ExploringData_Lecture.html)
-
 
 Lab Workbook
 
 
+### Additional Resources
 
+Coming Soon
